--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine on
-RewriteRule ^login/ login/login.php?url=$1 [NC,L,QSA]
-RewriteRule ^logout/ logout/logout.php [NC,L,QSA]
+RewriteRule (.*) security/security.php?url=$1 [NC,L,QSA,e=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+
